minor fixes; wrapped founder bios in markdown

--- a/styles/call-to-action.less
+++ b/styles/call-to-action.less
@@ -3,9 +3,9 @@
 
 #call-to-action{
   margin-top:0;
-  padding: 60px 20px 20px;
+  padding: 30px 20px 20px;
 
-  height: 270px;
+  height: 230px;
   .btn-cta{
     display: block;
     border: 1px solid @text-light-purple;
