--- a/styles/team-profiles.less
+++ b/styles/team-profiles.less
@@ -15,7 +15,9 @@
       }
     }
     &:nth-child(even){
-      background-color: @bg-dark-blue;
+      background: url("/images/Ethereum-BGD_4K_2.png") center center no-repeat @bg-dark-blue;
+      background-size: cover;
+
       h2, p{
         color: #fff;
       }
